--- a/MSA-Chagok/reparking-service/build.gradle
+++ b/MSA-Chagok/reparking-service/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     testImplementation 'org.mockito:mockito-inline:5.0.0'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-//    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.101.Final:osx-aarch_64'
+    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.101.Final:osx-aarch_64'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
